--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "init": "^0.1.2",
     "intl": "^1.2.5",
     "path": "^0.12.7",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "simsimi": "^3.0.0"
   },
   "keywords": [],
   "author": "",
