--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^1.26.2",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "cross-fetch": "^3.1.5",
     "discord.js": "^13.6.0",
     "ejs": "^3.1.6",
     "ejs-lint": "^1.2.0",
