--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "GCS0805B",
   "version": "1.0.0",
   "main": "product.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.mjs"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
