--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "GCS0805B",
   "version": "1.0.0",
-  "main": "product.js",
+  "type":"module",
+  "exports": "./node_modules/pokedex-promise-v2/dist/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
