--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "exports": "./node_modules/pokedex-promise-v2/dist/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.cjs"
+    "start": "node server.mjs"
   },
   "repository": {
     "type": "git",
