--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "GCS0805B",
   "version": "1.0.0",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --experimental-modules --experimental-json-modules server.mjs"
