--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
+    "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.26.2",
     "cookie-parser": "^1.4.5",
